# MiyaPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/miya/player/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  MiyaPlayer.cpp  MiyaPlayer.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  util.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/miya/player/: MainActivity.kt  MiyaPlayer.kt  OnErrorListener.kt  OnPreparedListener.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/miya/player/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
